--- a/style.css
+++ b/style.css
@@ -3,8 +3,16 @@ body {
 }
 
 .sidebar {
+    position: sticky;
+    top: 0;
     height: 100vh;
     background-color: #faf9f8;
+    overflow-y: auto;
+}
+
+.sidebar-content {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 
 .nav-link {
@@ -23,3 +31,76 @@ body {
     margin-bottom: 20px;
 }
 
+.gantt-container {
+    overflow-x: auto;
+    width: 100%;
+}
+
+#gantt-table {
+    border-collapse: collapse;
+    width: auto;
+    min-width: 100%;
+}
+
+#gantt-table th, #gantt-table td {
+    border: 1px solid #dddddd;
+    text-align: center;
+    padding: 8px;
+    font-size: 11px;
+    min-width: 30px;
+}
+
+#gantt-table th {
+    background-color: #f4f4f4;
+    font-size: 10px;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+}
+
+#gantt-table td.block {
+    color: white;
+    font-weight: bold;
+}
+
+#gantt-table td.block.pildora {
+    background-color: #d9af05;
+}
+
+#gantt-table td.block.tema {
+    background-color: #2ecc71;
+}
+
+#gantt-table td.tema {
+    background-color: #2ecc71;
+}
+
+#gantt-table td.proyecto {
+    background-color: #e67e22;
+}
+
+#gantt-table td.block.proyecto {
+    background-color: #e67e22;
+}
+
+#gantt-table td.empty {
+    background-color: #f9f9f9;
+}
+
+#gantt-table .label {
+    font-weight: bold;
+    color: rgb(0, 0, 0);
+    text-align: left;
+    position: sticky;
+    left: 0;
+    stroke: none;
+    z-index: 2;
+}
+
+.icon {
+    margin-right: 5px;
+}
+
+#generate {
+    margin-bottom: 15px;
+}
