--- a/style.css
+++ b/style.css
@@ -71,6 +71,10 @@ body {
     background-color: #f1ad70;
 }
 
+.integracion {
+    background-color: #b71422;
+}
+
 .temas {
     background-color: #5dc083;
 }
@@ -131,3 +135,8 @@ body {
 }
 
 a {text-decoration: none;}
+
+.card-text{
+    margin: 15px 8px;
+    color: #b71422;
+}
